# franko

./: Cargo.toml  README.md  ROADMAP.md  THEMES.md  config.example.toml
.github/workflows/: ci.yml
assets/: reader.js  style.css
assets/css/: main.css
assets/css/base/: _index.css  _reset.css  _variables.css
assets/css/components/: _buttons.css  _forms.css  _index.css  _loading.css  _modal.css  _tooltips.css
assets/css/layout/: _header.css  _index.css  _responsive.css
assets/css/pages/: _book-info.css  _home.css  _index.css  _library.css  _reader-settings.css  _reader.css  _settings.css
assets/css/themes/: _index.css  amoled.css  atom-one-dark.css  atom-one-light.css  ayu-dark.css  ayu-light.css  ayu-mirage.css  catppuccin-frappe.css  catppuccin-latte.css  catppuccin-macchiato.css  catppuccin-mocha.css  cobalt2.css  custom.css  dracula.css  everforest-dark.css  everforest-light.css  flexoki-dark.css  flexoki-light.css  github-dark.css  github-light.css  gruvbox-dark.css  gruvbox-light.css  high-contrast.css  horizon.css  iceberg.css  kanagawa.css  kindle.css  kobo.css  light.css  material-dark.css  midnight-blue.css  monokai.css  night-owl-light.css  night-owl.css  nord.css  one-dark.css  oxocarbon-dark.css  palenight.css  paper.css  poimandres.css  (+12 more)
assets/js/: main.js
assets/js/core/: dom.js  index.js  storage.js  toast.js  utils.js
assets/js/features/: animations.js  autoscroll.js  index.js  keyboard.js  layout.js  position.js  progress.js  search.js  settings-panel.js  sidebar.js  theme.js  typography.js
src/: cli.rs  error.rs  main.rs  reader.rs
src/config/: defaults.rs  keybindings.rs  loader.rs  mod.rs  structs.rs  theme.rs
src/formats/: book.rs  epub.rs  markdown.rs  mod.rs  pdf.rs  txt.rs
src/search/: index.rs  mod.rs  query.rs
src/tui/: app.rs  components.rs  event.rs  input.rs  mod.rs  render.rs  state.rs
src/tui/render/: content.rs  lines.rs  mod.rs  overlays.rs  status.rs
src/web/: api.rs  handlers.rs  mod.rs  static_files.rs  templates.rs
src/web/api/: books.rs  handlers.rs  helpers.rs  mod.rs  progress.rs  search.rs  types.rs
src/web/templates/: base.rs  helpers.rs  index.rs  library.rs  mod.rs  reader.rs  settings.rs
tests/: cli_tests.rs  format_tests.rs  library_tests.rs  web_tests.rs
