[package]
name = "franko"
version = "0.1.0"
edition = "2021"
authors = ["Master of Zen"]
description = "The ultimate book reader for power users - TUI and Web interface"
license = "MIT"
repository = "https://github.com/master-of-zen/franko"
keywords = ["ebook", "reader", "tui", "epub", "pdf"]
categories = ["command-line-utilities", "text-processing"]

[features]
default = ["tui", "web", "epub", "pdf", "markdown", "txt"]
# Interface features
tui = ["dep:ratatui", "dep:crossterm"]
web = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tokio"]
# Format features
epub = ["dep:epub"]
pdf = ["dep:lopdf", "dep:pdf-extract"]
markdown = ["dep:pulldown-cmark"]
txt = []
# Optional features
syntax-highlighting = ["dep:syntect"]
image-support = ["dep:image"]
search = ["dep:tantivy", "dep:parking_lot"]
cloud-sync = ["dep:reqwest"]

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.34", features = ["full"], optional = true }

# TUI dependencies
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

# Web dependencies
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = [
    "fs",
    "cors",
    "compression-gzip",
], optional = true }

# Book format parsers
epub = { version = "2.1", optional = true }
lopdf = { version = "0.32", optional = true }
pdf-extract = { version = "0.7", optional = true }
pulldown-cmark = { version = "0.10", optional = true }

# Optional features
syntect = { version = "5.1", optional = true }
image = { version = "0.24", optional = true }
tantivy = { version = "0.22", optional = true }
parking_lot = { version = "0.12", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
unicode-width = "0.1"
textwrap = "0.16"
html2text = "0.12"
walkdir = "2.4"
rusqlite = { version = "0.30", features = ["bundled"] }
open = "5"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "franko"
path = "src/main.rs"

# Fast debug builds
[profile.dev]
opt-level = 0
debug = true

# Optimize dependencies even in dev mode (huge speed boost for runtime)
[profile.dev.package."*"]
opt-level = 2

# Quick release for testing (much faster than full release)
[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16

# Full release for distribution (slow but max optimization)
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
